# -

./: README.md  index.html  package-lock.json  package.json  todo.txt  vite.config.js
src/: App.vue  main.js  service.vue
src-tauri/: Cargo.toml  null  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  main.rs
src-tauri/src/common/: db.rs  request.rs  template.json
src/components/: Header.vue  Left.vue  Right.vue
src/store/: index.js  template.json
