[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json", "macros", "decimal"] }
tokio = "1.27.0"
thread = "0.1.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
log = "0.4.16"
env_logger = "0.10.0"
urlencoding = "2.1.2"
rand = "0.8.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
